examples/example_045/example_045.v
Require Foo.A.B.
Import Foo.A.B.
Fail Check Foo.A.B.b.
